--- a/src/_includes/partials/cta-heading.html
+++ b/src/_includes/partials/cta-heading.html
@@ -1,8 +1,11 @@
 <h2 class="cta-heading {% if callToAction %}call-to-action-heading {% endif %}">
     <div class="subtitle">
-        <span>{{subtitle}}</span>&nbsp;<span class="subtitleDetail">{{subtitleDetail}}</span>
+        <span>{{subtitle}}</span>
     </div>
     {% if callToAction %}
     <a class="call-to-action" href="{{callToAction.href}}">{{callToAction.text}}</a>
     {% endif %}
 </h2>
+{%- if subtitleDetail %}
+<div class="subtitle-detail">{{subtitleDetail}}</div>
+{% endif %}
