--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -52,4 +52,5 @@ a {
 @import "./components/post-card";
 @import "./components/posts";
 @import "./components/post-common";
+@import "./components/pagination";
 
