--- a/src/_includes/partials/recommended-posts.html
+++ b/src/_includes/partials/recommended-posts.html
@@ -1,7 +1,7 @@
 {% set recommendedPosts = helpers.getSiblingContent(collections.posts, page) %}
 {% if recommendedPosts %}
 <footer class="other-reading post-tiles">
-    <h3>Read something else</h3>
+    <h3>You might also like</h3>
     {% set postslist = recommendedPosts %}
     <ul class="tiles">
         {% for item in postslist %}
