--- a/src/_includes/partials/series-nav.html
+++ b/src/_includes/partials/series-nav.html
@@ -6,14 +6,14 @@
         <div class="series-nav-title"><div class="series-descriptor">SERIES: </div><a title="Navigate to series" href="{{seriesUrl}}"><span>{{series.title}}</span></a> </div> 
     </div>
     
-    <div class="series-links">
+    <div class="pagination-links">
         {% if seriesInfo.hasPrev %}
         {% set prev = seriesInfo.prev %}
-        <a class="series-prev" title="{{prev.data.title}}" href="{{prev.url}}"><span class="series-direction">Previous post</span></a>
+        <a class="pagination-prev" title="{{prev.data.title}}" href="{{prev.url}}"><span class="pagination-direction">Previous post</span></a>
         {% endif %}
         {% if seriesInfo.hasNext %}
         {% set next = seriesInfo.next %}
-        <a class="series-next" title="{{next.data.title}}" href="{{next.url}}"><span class="series-direction">Next post</span></a>
+        <a class="pagination-next" title="{{next.data.title}}" href="{{next.url}}"><span class="pagination-direction">Next post</span></a>
         {% endif %}
     </div>
 </nav>
