--- a/src/_includes/partials/meta.html
+++ b/src/_includes/partials/meta.html
@@ -41,4 +41,4 @@
     <meta property="og:description" content="{{ tagline }}"/>
 {% endif %}
 
-<link rel="icon" href="/images/meta/favicon.svg" type="image/svg+xml" />
+<link rel="icon" href="/images/favicon.svg" type="image/svg+xml" />
