--- a/src/_includes/partials/post-hero.html
+++ b/src/_includes/partials/post-hero.html
@@ -1,4 +1,4 @@
-<article class="post-hero">
+<article slot="before" class="post-hero">
     <div class="img-wrapper">
         <div class="hero-img">
             {% include 'partials/series-banner.html' %}
