--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -33,11 +33,11 @@
     </head>
     <body>
         <input aria-label="Switch theme colors" type="checkbox" id="theme" name="theme" class="visually-hidden">
-        <div class="wrapper page-layout {{containerClass}}">
+        <div class="wrapper page-layout anim-bg {{containerClass}}">
+            {% include "partials/header.html" %}
             {% include "partials/actionbar.html" %}
             <main id="main-content">
                 <intersect-detect class="main-content">
-                    {% include "partials/header.html" %}
                     {% block content %}{% endblock %}
                 </intersect-detect>
             </main>
