--- a/src/scss/components/_bg-hero.scss
+++ b/src/scss/components/_bg-hero.scss
@@ -2,8 +2,9 @@
     #{$class} {
         position: relative;
         &:before {
-            content:"";
-            background-image: linear-gradient(to bottom,var(--Background) 0,transparent 33%,var(--Background) 84%),url(/images/ill_back.svg);
+            content: "";
+            /* css variables don`t work here in safari :/ */
+            background-image: linear-gradient(to bottom,#343434 0,transparent 33%,#343434 84%),url(/images/ill_back.svg);
             background-size:111%;
             background-position:10% 25%;
             background-repeat: no-repeat;
@@ -13,6 +14,8 @@
             left:0;
             right:0;
             background-attachment: fixed;
+            z-index: 0;
+            transform: translateZ(1);
         }
     }
     
@@ -24,7 +27,7 @@
                 background-repeat: no-repeat;
                 background-position-x: 60%;
                 background-position-y:0%;
-                background-image: linear-gradient(to bottom, var(--Background) 5%, transparent 27%,var(--Background) 50vw)
+                background-image: linear-gradient(to bottom, #343433 5%, transparent 27%,#343434 50vw)
                 , url(/images/ill_back.svg);
             }
         }
@@ -38,7 +41,7 @@
                 background-repeat: no-repeat;
                 background-position-x: 60%;
                 background-position-y:3%;
-                background-image: linear-gradient(to bottom, var(--Background) 11%, transparent 18%,var(--Background) 30vh)
+                background-image: linear-gradient(to bottom, #343433 11%, transparent 18%,#343433 30vh)
                 , url(/images/ill_back.svg);
             }
         }
