--- a/src/_includes/layouts/generic.njk
+++ b/src/_includes/layouts/generic.njk
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div slot="observable">
-{% include "partials/post-hero.html" %
+{% include "partials/post-hero.html" %}
 </div>
 
 < class="post-title">
