--- a/src/_includes/layouts/generic.njk
+++ b/src/_includes/layouts/generic.njk
@@ -7,9 +7,9 @@
 {% include "partials/post-hero.html" %}
 </div>
 
-< class="post-title">
+<div class="post-title">
     <h1 class="text-in thirdin">{{ title }}</h1>
-</>
+</div>
 <div class="post-wrap">
     <article class="post content">
         <section class="post-content">
