--- a/src/_includes/layouts/index.njk
+++ b/src/_includes/layouts/index.njk
@@ -7,5 +7,6 @@
    <div slot="observable" class="collapse">
       {% include  "partials/hero.html"%}
    </div>
+   <div class="fade-in"></div>
    {% include  "partials/posts.html"%}
 {% endblock %}
