--- a/src/scss/components/_headings.scss
+++ b/src/scss/components/_headings.scss
@@ -50,7 +50,7 @@ h2 {
     display: block;
     height: 0.2rem;
     transform: translateZ(0);
-    will-change: transform;
+    will-change: clip-path, transform;
     clip-path: polygon(0 0,40vw 0, 40vw 100%, 0 100%);
     margin-top: 0.2rem;
     background: var(--Primary);
