github something wrong suggestion link

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -26,7 +26,10 @@
             {{ content | safe }}
         </section>
         {% include 'partials/series-nav.html' %}
-        {% include 'partials/recommended-posts.html' %}
+        <footer>
+            {% include 'partials/something-wrong.html' %}
+            {% include 'partials/recommended-posts.html' %}
+        </footer>
     </article>
 </div>
 {% endblock %}
