--- a/src/scss/components/_toggle.scss
+++ b/src/scss/components/_toggle.scss
@@ -229,6 +229,7 @@ $short-anim: 0.9s;
     width: auto;
     height: 3rem;
     align-items: center;
+    margin: 0;
   }
   .toggle-desktop {
     display: none;
