--- a/src/scss/blog.scss
+++ b/src/scss/blog.scss
@@ -6,3 +6,11 @@
 * {
     word-break: break-word;
 }
+
+.something-wrong {
+    margin:0.5rem 0;
+    font-size: var(--font-size-small);
+    a {
+        color: var(--PrimaryText);
+    }
+}
