--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -27,6 +27,10 @@
         </section>
         {% include 'partials/series-nav.html' %}
         <footer>
+            <div class="author-data">
+                {% include 'partials/sponsor.html' %}
+                {% include 'partials/author.html' %}
+            </div>
             {% include 'partials/something-wrong.html' %}
             {% include 'partials/recommended-posts.html' %}
         </footer>
