--- a/src/scss/components/_author.scss
+++ b/src/scss/components/_author.scss
@@ -32,6 +32,7 @@ figure.author-info {
         justify-content: center;
         height: 3rem;
         width: auto;
+        align-items: flex-start;
     }
     img {
         border: solid 2px var(--Primary);
