--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -11,9 +11,9 @@
 
 
         <!-- todo preload right fonts, can we do this magically? -->
-        <link rel="preload" as="font" type="font/woff2" href="/fonts/Nunito-400-latin5.woff2" />
-        <link rel="preload" as="font" type="font/woff2" href="/fonts/Nunito-600-latin10.woff2" />
-        <link rel="preload" as="font" type="font/woff2" href="/fonts/Nunito-800-latin15.woff2"/>
+        <link crossorigin="anonymous" rel="preload" as="font" type="font/woff2" href="/fonts/Nunito-400-latin5.woff2" />
+        <link crossorigin="anonymous" rel="preload" as="font" type="font/woff2" href="/fonts/Nunito-600-latin10.woff2" />
+        <link crossorigin="anonymous" rel="preload" as="font" type="font/woff2" href="/fonts/Nunito-800-latin15.woff2"/>
 
 
         <link rel="preload" as="style" media="print" href="/fonts/fonts.css?{{ assetHash }}" onload="this.media='all'"/>
