--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header-wrapper">
     <div class="site-header">
         <div class="theme-toggle toggle-mobile">{% include "./toggle.html" %}</div>
-        <a href="/" class="logo">{% include "img/logo.svg"%}</a>
+        <a href="/" aria-label="site logo, links to site home" class="logo">{% include "img/logo.svg"%}</a>
     </div>
 </header>
