--- a/src/_includes/partials/share-page.html
+++ b/src/_includes/partials/share-page.html
@@ -3,7 +3,7 @@
     {% set genericShare = external.genericShare.data(title, tags, page) %}
     <li><button class="native-share" style="display: none;" hidden data-title="{{genericShare.title}}" data-url="{{genericShare.url}}" data-text="{{genericShare.text}}" aria-label="Native share">{% include 'img/share.svg' %}</button></li>
     {%- for link in external.sharing %}
-              <li><a class="icon-share url-share" title="{{link.text}}" target="_blank" href="{{link.url(title, tags, page) | url}}" class="action external">{% include link.icon %}</a></li>
+              <li><a rel="noopener" class="icon-share url-share" title="{{link.text}}" target="_blank" href="{{link.url(title, tags, page) | url}}" class="action external">{% include link.icon %}</a></li>
           {%- endfor %}
   </ul>
 </nav>
