fade fixes and read time

--- a/src/scss/components/_author.scss
+++ b/src/scss/components/_author.scss
@@ -12,6 +12,9 @@
     display: flex;
     .sponsor {
         flex: 1;
+        a {
+            display: inline-block;
+        }
     }
 }
 figure.author-info {
