--- a/src/_includes/partials/sponsor.html
+++ b/src/_includes/partials/sponsor.html
@@ -1,6 +1,6 @@
 <div class="sponsor">
     <span>Did some of the content help you?</span>
-    <div>Share on social media, or<a href="https://twitter.com/intent/follow?screen_name=griffadev">&nbsp;follow me on twitter</a>, or please
+    <div>Share on social media, or<a href="https://twitter.com/intent/follow?screen_name=griffadev">&nbsp;follow me on twitter,</a> or please
     </div>
     <div>
         <a href='https://ko-fi.com/G2G221OBA' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://cdn.ko-fi.com/cdn/kofi2.png?v=2' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
