--- a/src/scss/components/_toggle.scss
+++ b/src/scss/components/_toggle.scss
@@ -15,6 +15,9 @@ html.transition *:after {
 :root {
   @include light;
   --White: #fff;
+  .fade-in {
+    @include light-fade;
+  }
 }
 
 .light,
@@ -26,6 +29,9 @@ html.transition *:after {
 #theme:checked + .wrapper,
 #theme:checked + .wrapper + .filler {
   @include dark;
+  .fade-in {
+    @include dark-fade;
+  }
 }
 
 #theme:checked + .wrapper {
@@ -35,6 +41,8 @@ html.transition *:after {
     }
   }
 }
+
+
 
 $long-anim: 1.5s;
 $short-anim: 0.9s;
@@ -54,10 +62,16 @@ $short-anim: 0.9s;
 @media (prefers-color-scheme: light) {
   :root {
     @include light;
+    .fade-in {
+      @include light-fade;
+    }
   }
   #theme:checked + .wrapper,
   #theme:checked + .wrapper + .filler {
     @include dark;
+    .fade-in {
+      @include dark-fade;
+    }
   }
 
   #theme + .anim-bg {
@@ -100,6 +114,9 @@ $short-anim: 0.9s;
 @media (prefers-color-scheme: dark) {
   :root {
     @include dark;
+    .fade-in {
+      @include dark-fade;
+    }
   }
 
   /* we want dark theme a little darker */
@@ -112,6 +129,9 @@ $short-anim: 0.9s;
   #theme:checked + .wrapper,
   #theme:checked + .wrapper + .filler {
     @include light;
+    .fade-in {
+      @include light-fade;
+    }
   }
 
   #theme:checked + .anim-bg {
