--- a/src/_includes/partials/author.html
+++ b/src/_includes/partials/author.html
@@ -1,5 +1,5 @@
 <figure class="author-info">
-    <a target="_blank" href="{{metadata.author.twitter_url}}"><img class="author-img" src="{{metadata.author.image}}" alt="Image of author: {{metadata.author.name}}".></a>
+    <a target="_blank" pgenhref="{{metadata.author.twitter_url}}"><img class="author-img" src="{{metadata.author.image}}" alt="Image of author: {{metadata.author.name}}".></a>
     <figcaption>
         <span class="author-name">{{metadata.author.name}}</span>
         <span class="author-twitter"><a target="_blank" href="{{metadata.author.twitter_url}}">{{metadata.author.twitter}}</a></span>
