--- a/src/_includes/partials/cta-heading.html
+++ b/src/_includes/partials/cta-heading.html
@@ -3,7 +3,7 @@
         <span>{{subtitle}}</span>
     </div>
     {% if callToAction %}
-    <a class="call-to-action" href="{{callToAction.href}}">{{callToAction.text}}</a>
+    <a class="call-to-action call-to-action-absolute" href="{{callToAction.href}}">{{callToAction.text}}</a>
     {% endif %}
 </h2>
 {%- if subtitleDetail %}
