--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -1,5 +1,7 @@
 {% extends "layouts/base.njk" %}
 
+{% set skipLinkAnchor = "#article-content" %}
+
 {% set pageCriticalStyles = ['css/blog.css'] %}
 
 {% block content %}
@@ -22,17 +24,19 @@
             </div>
         </div>
         {% include "partials/post-tags.html" %}
-        <blockquote>{{tagline}}</blockquote>
-        {% include 'partials/series-nav.html' %}
-        <section class="post-content">
-            {{ content | safe }}
-        </section>
-        {% include 'partials/series-nav.html' %}
-        <footer>
-            {% include 'partials/author-data.html' %}
-            {% include 'partials/something-wrong.html' %}
-            {% include 'partials/recommended-posts.html' %}
-        </footer>
+        <article id="article-content">
+            <blockquote>{{tagline}}</blockquote>
+            {% include 'partials/series-nav.html' %}
+            <section class="post-content">
+                {{ content | safe }}
+            </section>
+            {% include 'partials/series-nav.html' %}
+            <footer>
+                {% include 'partials/author-data.html' %}
+                {% include 'partials/something-wrong.html' %}
+                {% include 'partials/recommended-posts.html' %}
+            </footer>
+        </article>
     </article>
 </div>
 {% endblock %}
