paginate tagged posts

--- a/src/_includes/layouts/all_series.njk
+++ b/src/_includes/layouts/all_series.njk
@@ -3,6 +3,7 @@
 {% set pageCriticalStyles = ['css/index.css'] %}
 
 {% block content %}
+{% include "partials/post-hero.html" %}
 {% set seriesList = pagination.items %}
 {% include "partials/series-list.html" %}
 {% endblock %}
