--- a/src/_includes/layouts/tags.njk
+++ b/src/_includes/layouts/tags.njk
@@ -2,7 +2,9 @@
 
 {% extends "layouts/base.njk" %}
 
-{% set postslist = collections[ tag ] %}
+{% set pagination = helpers.getPagination(pagination, paged) %}
+
+{% set postslist = paged.elements %}
 
 {% block content %}
    {% include  "partials/posts.html"%}
