--- a/src/_includes/partials/posts.html
+++ b/src/_includes/partials/posts.html
@@ -1,4 +1,4 @@
-<article class="content post-tiles">
+<article id="recent-articles" class="content post-tiles">
   <div class="content-wrap">
     {% include './cta-heading.html' %}
     
