--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -12,7 +12,7 @@ $dark-highlight: #FFF;
 /* Light */
 $light-bg:#FDFDFD;
 $light-bg-50:#F5F5F5;
-$light-secondary:#f3f0f0;
+$light-secondary:#F6F5F5;
 $light-primary:#1473E6;
 $light-primary-text: #0053b7;
 $light-primary-50:#1267CF;
