--- a/src/scss/components/_posts.scss
+++ b/src/scss/components/_posts.scss
@@ -8,6 +8,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(25rem,1fr));
     grid-gap: 1.5rem;
+    margin-top:3rem;
   }
 }
 
