--- a/src/scss/utilities/_layout.scss
+++ b/src/scss/utilities/_layout.scss
@@ -48,11 +48,122 @@ main {
   width: min(100% - 2rem, #{$max-post-width});
   .content-wrap {
     background: var(--Background);
-    padding: 1rem var(--site-padding);
+    padding: 2rem var(--site-padding);
     z-index: 1;
   }
   > section {
     padding-left: 1px;
+  }
+}
+
+$icon-size:9rem;
+$tagline-height:3rem;
+.hero-scroll-down {
+  /* dont want it on mobile */
+  display: none;
+  justify-content: center;
+  align-items: center;
+  height: $icon-size;
+  width: 100%;
+  position: relative;
+  z-index: 1;
+  animation: wiggle 0.7s forwards;
+  transform: translateY(-10px);
+  transition:  opacity 0.3s ease-in-out !important;
+  opacity: 0;
+
+  &:hover, &:focus {
+    opacity: 1 !important;
+  }
+  a {
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &:hover, &:focus {
+      transform: translateY(5px);
+    }
+  }
+  
+  svg {
+    height: 1.6rem;
+    width: 1.6rem;
+    fill: var(--Text);
+  }
+}
+
+.site-tag {
+  height: $tagline-height;
+  width: 100%;
+  display: inline-flex;
+  flex-direction: column;
+  padding: 2rem var(--site-padding) 4rem var(--site-padding);
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  > * {
+    opacity: 0;
+    transition: transform 0.6s ease-in-out, opacity 0.3s ease-in-out;
+  }
+  .first-there {
+    font-size: 3rem;
+    font-weight: bold;
+  }
+  .second-there {
+    transition-delay: 0.8s;
+  }
+}
+
+[observable="hidden"] {
+  .hero-scroll-down {
+    a {
+        opacity: 0;
+      }
+  }
+
+  .site-tag {
+    > * {
+      opacity: 1;
+      transform: translateY(-4rem);
+    }
+  }
+}
+
+@keyframes wiggle {
+  0% {
+    transform: translateY(-20px);
+  }
+
+  50% {
+    transform: translateY(0px);
+  }
+
+  75% {
+    transform: translateY(-20px);
+  }
+
+  100% {
+    transform: translateY(-10px);
+    opacity: 0.8;
+  }
+}
+
+.hero-wrap {
+  height: calc(65vh - (#{$icon-size} + #{$tagline-height}));
+}
+
+@media screen and (min-width: 80em) {
+  .hero-scroll-down {
+    display: flex;
+  }
+  .hero-wrap {
+    height: calc(100vh - (#{$icon-size} + #{$header} + #{$tagline-height}));
+  }
+
+  .content {
+    .content-wrap {
+      padding: var(--site-padding);
+    }
   }
 }
 
@@ -74,6 +185,21 @@ main {
   main {
     margin: 0;
     flex: 1 !important;
+  }
+}
+
+@media screen and (min-width: 3000px) {
+  .site-tag {
+    .first-there {
+      font-size: 6rem;
+      margin-bottom: 3rem;
+    }
+    .second-there {
+      font-size: 4rem;
+    }
+  }
+  .hero-wrap {
+    height: calc(100vh - (#{$icon-size} + #{$header} + #{$tagline-height} + 3rem));
   }
 }
 
