--- a/src/scss/components/_author.scss
+++ b/src/scss/components/_author.scss
@@ -10,6 +10,7 @@
 
 .author-data {
     display: flex;
+    padding-top:4rem;
     .sponsor {
         flex: 1;
         line-height: calc(var(--font-size-small) * 1.3);
