--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -1,6 +1,9 @@
 .logo {
     margin-left: 1rem;
     height: 85%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     svg {
         height: 80%;
         width: auto;
