--- a/src/scss/utilities/_layout.scss
+++ b/src/scss/utilities/_layout.scss
@@ -1,7 +1,6 @@
 @import "variables";
 
 body {
-  margin-bottom: 2rem;
   --site-padding: #{$desktop-padding};
 }
 .wrapper {
@@ -41,11 +40,13 @@ main {
     align-items: center;
   }
 }
+.content, footer {
+  width: min(100% - 2rem, #{$max-post-width});
+}
 
 .content {
   padding: 0;
   margin:0;
-  width: min(100% - 2rem, #{$max-post-width});
   .content-wrap {
     background: var(--Background);
     padding: 2rem var(--site-padding);
@@ -185,6 +186,10 @@ $tagline-height:3rem;
   main {
     margin: 0;
     flex: 1 !important;
+  }
+
+  .footer-wrap {
+    background: var(--Background);
   }
 }
 
