--- a/src/_includes/partials/something-wrong.html
+++ b/src/_includes/partials/something-wrong.html
@@ -1,3 +1,3 @@
 <div class="something-wrong">
-    <span>Something not quite right on this page? <a target="_blank" href="{{page | githubIssue}}">please let us know.</a></span>
+    <span>Something not quite right on this page? <a target="_blank" href="{{page | githubIssue}}">please let me know.</a></span>
 </div>
