add disqus comments

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -40,4 +40,5 @@
         {% include 'partials/share-page.html' %}
         {% include 'partials/something-wrong.html' %}
         {% include 'partials/recommended-posts.html' %}
+        {% include 'partials/comments-section.html' %}
 {% endblock %}
