add disqus comments

--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -46,6 +46,10 @@ footer {
         margin-top:2rem;
     }
 
+    h3 {
+        margin-bottom: 2rem;
+    }
+
     .sharing {
         .social-share {
             justify-content: flex-start;
